# aidb

./: .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  package.json
apps/admin/: package.json
apps/admin/src/: App.tsx  main.tsx
apps/admin/src/components/: InviteDialog.tsx  SideNav.tsx  TopBar.tsx
apps/admin/src/layout/: MainLayout.tsx
apps/admin/src/lib/: api.ts  auth.ts
apps/admin/src/pages/: Audit.tsx  Billing.tsx  Branches.tsx  Dashboard.tsx  Login.tsx  PITR.tsx  Projects.tsx  Teams.tsx  Usage.tsx  User.tsx
apps/core/: .env.example  package.json  tsconfig.json
apps/core/src/: app.ts  server.ts
apps/core/src/api/: auth.ts  billing.ts  database.ts  observability.ts  pits.ts  replica.ts  storage.ts  teams.ts  vector.ts
apps/core/src/middleware/: audit.ts  auth.ts  errorHandler.ts
apps/core/src/models/: Billing.ts  Database.ts  Observability.ts  PITR.ts  Replica.ts  Team.ts  User.ts
apps/core/src/services/: BillingService.ts  DatabaseService.ts  ObservabilityService.ts  PITRService.ts  ReplicaService.ts  StorageManager.ts  TeamService.ts  UserService.ts  VectorService.ts
apps/core/src/utils/: env.ts  jwt.ts  logger.ts
apps/customer/: package.json
apps/customer/src/: App.tsx
apps/customer/src/lib/: api.ts
apps/landing/: package.json  tsconfig.app.json  tsconfig.node.json
apps/landing/src/: App.tsx
apps/support/: package.json
apps/support/src/: App.tsx  main.tsx
apps/toolkit/: package.json  tsconfig.json
apps/toolkit/src/: api.ts  auth.ts  config.ts  index.ts  utils.ts
docs/: api-convention.md  cloud-config.md  deployment.md  extend.md  ops-checklist.md  upgrades.md
orchestrator/orchestrator/: Cargo.toml  build.rs  diesel.toml
orchestrator/orchestrator/src/: admin_seed.rs  compute.rs  db.rs  main.rs  models.rs  pageserver_client.rs  schema.rs
orchestrator/proto/: orchestrator.proto  pageserver.proto
pageserver/: Cargo.toml
pageserver/proto/: pageserver.proto
pageserver/src/: main.rs  s3store.rs  storage.rs  walstore.rs
wal_agent/: Cargo.toml  build.rs
wal_agent/proto/: pageserver.proto
wal_agent/src/: main.rs
(+48 files in other folders)
