[package]
name = "pageserver"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
tonic = { version = "0.11", features = ["transport"] }
prost = "0.12"
prost-types = "0.12"
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
config = "0.14"
anyhow = "1.0"
uuid = { version = "1.7", features = ["v4"] }
tokio = { version = "1.37", features = ["full", "fs"] }
aws-config = "1"
aws-sdk-s3 = { version = "1", features = ["behavior-version-latest"] }
dotenvy = "0.15"


[build-dependencies]
tonic-build = "0.11"
