[package]
name = "wal_agent"
version = "0.1.0"
edition = "2024"

[dependencies]
tonic = "0.11"
prost = "0.12"
tokio = { version = "1.37", features = ["full"] }
notify = "6"           # filesystem watcher
base64 = "0.21"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"

# For quick and simple CLI config/dev use:
clap = { version = "4.5", features = ["derive", "env"] }

[build-dependencies]
tonic-build = "0.11"
