[package]
name = "orchestrator"
version = "0.1.0"
edition = "2021"
build = "build.rs"
default-run = "orchestrator"



[dependencies]
tonic = "0.11"
prost = "0.12"
prost-types = "0.12"
tokio = { version = "1.37", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
config = "0.14"
once_cell = "1.19"
anyhow = "1.0"
diesel = { version = "2.1.5", features = ["sqlite", "postgres", "r2d2", "chrono"] }
dotenvy = "0.15.7"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tonic-reflection = "0.11"
kube = { version = "0.90", features = ["derive", "runtime"] }
k8s-openapi = { version = "0.21", features = ["v1_29"] }
rand = "0.8"
base64 = "0.21"




[[bin]]
name = "admin_seed"
path = "src/admin_seed.rs"


[build-dependencies]
tonic-build = "0.11"
